architecture-ide/tests/fixtures/negative/S2_pattern_field_not_in_action.sync
sync BadSync

  when
    Counter/inc: [ bogus: ?bogus ] => [ total: ?total ]
  then
    Log/append: [ event: ?total ]
